fixed tab layout issues

--- a/src/components/Panels/Basemaps/Basemaps.css
+++ b/src/components/Panels/Basemaps/Basemaps.css
@@ -1,3 +1,3 @@
 .basemaps calcite-tabs {
-  height: calc(var(--app-height) - 49px - 59.8438px);
+  height: calc(var(--app-height) - 49px - 46px);
 }
